tools/data-generator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: flair-data-generator
spec:
  containers:
  - name: data-generator
    image: flairbi/flair-data-generator:latest
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
